# babypoolapp

./: .replit  README.md  app.py  auth.py  auth.py.orig  build_frontend.py  check_users.py  config.py  create_test_host.py  google_auth.py  init_db.py  jwt_fix.patch  models.py  pyproject.toml  routes.py  test_auth_headers.py  test_event_creation.py  test_event_simple.py  test_guest_auth_flow.py  test_guest_management.py  test_guest_simple.py  test_login.py  test_login_flow.py  test_login_persistence.py  utils.py
attached_assets/: Baby Pool App Specifications Prompt.md  Pasted-Baby-Pool-App-Build-a-baby-shower-app-using-flask-react-and-sqlite-that-is-responsive-design-with--1746499048436.txt
docs/: Baby_Pool_App_Specifications.md  guest_login_audit_results.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AuthContext.js  CustomCalendarGrid.js  Footer.js  (+3 more)
static/css/: main.css  themes.css
static/js/: auth_test.js  event-creation.js  login_persistence_test.js  main.js  test_login_form.js
templates/: dashboard.html  event_create.html  guest_login.html  guest_login.html.new  host_login.html  host_register.html  index.html  test_auth.html
templates/includes/: nav.html
tests/: guest_login_diagnostic.js  guest_login_test.js
tests/auth/: check_auth_integration.py  test_client_auth.js  test_data_types.py  test_frontend_auth.js  test_guest_login_flow.py  test_jwt_guest_auth.py  test_login.py  test_login_flow.py  test_react_routing.js
tests/events/: check_events.py
tests/guests/: test_guest_participation.py
(+21 files in other folders)
